wip: tracesession for branching